--- a/src/app/application-onboarding/application/application-setup/application-road-map/application-road-map.component.less
+++ b/src/app/application-onboarding/application/application-setup/application-road-map/application-road-map.component.less
@@ -5,6 +5,7 @@
     height: 100%;
 	padding: 25px 30px;
 	border-right: 1px solid #ebedef;
+	min-width: 350px;
 }
 .tree-inset{
 	border-left: 2px solid #ececec;
