--- a/src/app/application-onboarding/application/application-setup/application-details/application-details.component.html
+++ b/src/app/application-onboarding/application/application-setup/application-details/application-details.component.html
@@ -2,7 +2,7 @@
               <div class="col-md-12">
                    <!-- [formGroup]="createApplicationForm" -->
                 <form>
-                  <div class="form-group">
+                  <div class="form-group" *ngIf="appDetailService.isParamsLoaded">
                         <opsmx-input [params]="appDetailService.applicationNameParams" ></opsmx-input>
                         <opsmx-input [params]="appDetailService.applicationDescriptionParams" ></opsmx-input>
                         <opsmx-input [params]="appDetailService.applicationEmailParams" ></opsmx-input>
@@ -21,20 +21,33 @@
                   </div>
                 </form><br>
 
-<!-- *ngIf="showApplicationForm" -->
-                 <div class="col-8 pull-right"  >
-                  <div class="page_access text-right py-2 px-3">
-                    <!-- *ngIf="editMode" (click)="SubmitApplicationForm()" -->
-                    <!-- <button class="btn btn-primary ml-2" >Update & Next</button> -->
-                    <!-- *ngIf="!editMode"  [disabled]="createApplicationForm.invalid" -->
-                     <!-- (onClick)="canceSaveTagClick()" -->
-                    <opsmx-button  [params]="appDetailService.applicationDetailsUpdateParams"></opsmx-button>
-                    <!-- (click)="SubmitApplicationForm()" -->
-                    <button class="btn btn-default ml-1">Cancel</button>
-                    <!--  (click)="cancelForm()" -->
-                    <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
-                   
+                  <!-- *ngIf="showApplicationForm" -->
+                 <div class="pull-right"  *ngIf="appDetailService.isParamsLoaded">
+                   <div class="mr-3 alignBtnRight">
+                    <opsmx-button [params]="appDetailService.applicationDetailsCancelParams" (click)="cancelForm()"></opsmx-button>
                   </div>
+                   <div class="alignBtnRight">
+                    <opsmx-button [params]="appDetailService.applicationDetailsSaveParams" (click)="submitApplicationForm()" *ngIf="!appDetailService.editMode" class="detailsButton"></opsmx-button>
+                    <opsmx-button [params]="appDetailService.applicationDetailsUpdateParams" (click)="updateApplicationForm()" *ngIf="appDetailService.editMode"></opsmx-button>
+                  </div>
+
+
+
+                  <!-- <div class="float-right">
+                    <button mat-button matStepperPrevious class="btn btn-secondary default-border">Back</button>&nbsp;&nbsp;&nbsp;
+                    <button mat-button (click)="submit()" class="btn btn-primary">Submit</button>
+                  </div>
+
+                  <div class="float-left" style="margin-left: 10px;">
+                      <opsmx-button *ngIf="addEditClusterTagInput" [params]="service.saveTagButtonParams" (onClick)="submit()">
+                      </opsmx-button>
+                  </div>
+                  <div class="float-left" style="margin-left: 10px;">
+                      <opsmx-button *ngIf="addEditClusterTagInput" [params]="service.cancelSaveTagButtonParams"
+                          (onClick)="canceSaveTagClick()"></opsmx-button>
+                  </div> -->
+
+
                 </div>
               
                 <!-- /.form-group -->
