--- a/src/app/application/application-dashboard/application-dashboard.component.less
+++ b/src/app/application/application-dashboard/application-dashboard.component.less
@@ -155,8 +155,8 @@
 .rightBox {
 	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-	margin-right: -25px;
-	margin-left: 25px;
+	// margin-right: -25px;
+	// margin-left: 25px;
 	background: #fff;
 	min-height: 100vh;
 	z-index: 30;
