--- a/src/styles.less
+++ b/src/styles.less
@@ -147,9 +147,10 @@ span{
 	min-width: 100%;
 }
 .content_section{
-	margin-left: 325px;
+	margin-left: 310px;
 	transition: margin-left linear 0.5s;
-	width: calc(100% - 310px);
+	width: auto;
+	height: 100%;
 }
 .view_in .content_section{
 	margin-left: 60px;
@@ -161,6 +162,7 @@ span{
 	padding: 8px 25px;
 	position: relative;
 	border-bottom: 2px #c9ced3 solid;
+	height: 56px;
 }
 .input-group-search .form-control, .input-group-search .btn{
 	border: none !important;
@@ -253,8 +255,8 @@ span{
 .rightBox{
 	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-	margin-right: -25px;
-	margin-left: 25px;
+	// margin-right: -25px;
+	// margin-left: 25px;
 	background: #fff;
 	min-height: 100vh;
 	z-index: 30;
