minor changes on audit page

--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -165,3 +165,7 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 	.cv_name{
 		font-size: 14px;;
 	}
+	.audit-2 {
+		padding-left: 1rem !important;
+		padding-right: 1rem !important;
+	}
