--- a/src/app/application-onboarding/application/application-setup/application-service/application-service.component.html
+++ b/src/app/application-onboarding/application/application-setup/application-service/application-service.component.html
@@ -1,1 +1,23 @@
-<p>application-service works!</p>
+<!-- <p>application-service works!</p> -->
+<form>
+    <!-- *ngIf="appDetailService.isParamsLoaded" -->
+                  <div class="form-group" >
+                      <input type="text">
+                      <opsmx-button ></opsmx-button>
+
+                        <!-- <opsmx-input [params]="appDetailService.applicationNameParams" ></opsmx-input>
+                        <opsmx-input [params]="appDetailService.applicationDescriptionParams" ></opsmx-input>
+                        <opsmx-input [params]="appDetailService.applicationEmailParams" ></opsmx-input>
+                        <opsmx-select [params]="appDetailService.imageSourceParams" ></opsmx-select> -->
+                        <!-- <input type="text" appLowercase tooltip="test"  tooltip-trigger="focus" tooltip-placement="right" class="form-control" [readonly]="editMode || applicationId" formControlName="name"  [ngClass]="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched ? 'is-invalid':''">
+                        <span *ngIf="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched"
+                      class="invalid-feedback">
+                            <span *ngIf="createApplicationForm.get('name').errors['required']">Application Name is
+                            required</span>
+                            <span *ngIf="createApplicationForm.get('name').errors['nameExists']">Application already
+                                exists with same name. Please choose a unique application name</span>
+                            <span *ngIf="createApplicationForm.get('name').errors['containSpace']">Space is not allowed in application name</span>
+                            <span *ngIf="createApplicationForm.get('name').errors['startingFromNumber']">The application name must begin with a letter.</span>
+                            <span *ngIf="createApplicationForm.get('name').errors['symbols']">No Special characters are allowed.</span>
+                        </span> -->
+                  </div>
